Fix vertical overflow

--- a/source/css/_alert-style.scss
+++ b/source/css/_alert-style.scss
@@ -3,10 +3,10 @@
 @use "variables";
 
 .alert-style {
-  padding: calc(var(--unit)) calc(var(--unit) * 0.75) calc(var(--unit) * 0.75);
+  padding: calc(var(--unit) * 0.75);
   display: flex;
   flex-direction: column;
-  gap: calc(var(--unit) * 0.75);
+  gap: calc(var(--unit) * 0.25);
   height: 100%;
 
   #hero-block {
@@ -59,8 +59,8 @@
         display: flex;
 
         img {
-          width: calc(var(--unit) * 1.6);
-          height: calc(var(--unit) * 1.6);
+          width: calc(var(--unit) * 1.2);
+          height: calc(var(--unit) * 1.2);
         }
       }
 
